Discard buttons >= 256

https://bugs.freedesktop.org/show_bug.cgi?id=95295

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
(cherry picked from commit ce85432f41549cd6f3c6e0c5e2e39d0c1aee8dfd)